--- a/TicTacToe.WPF/MainWindow.xaml
+++ b/TicTacToe.WPF/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TicTacToe.WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Tic Tac Toe" Height="468.199" Width="565.074">
     <Grid>
-        
+
     </Grid>
 </Window>
